jdk17->jdk21 & h2->sqlite